--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>ProfesorEnLinea</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favico.ico">
   <!--estilos de bootswatch-->
   <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
    <!--estilos de jquery bootstrap-->
